--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,7 +5,8 @@ body {
   font-weight:normal;
   color: #eaeaea;
   background-color: #1b1e1f;
-  padding: 8px;
+  padding: 0;
+  margin: 0;
 }
 
 :focus-visible {
