Adiciona state global

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,3 +12,22 @@ body {
 :focus-visible {
   outline: none;
 }
+
+::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
+
+::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 0.2);
+  border-radius: 6px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgba(132, 136, 136, 0.7);
+  border-radius: 6px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: rgba(132, 136, 136, 0.7);
+}
